@@ -2,6 +2,8 @@ from proj import *
 from CF_proj import *
 from CF_createfile import *
 from CF_loadfile import *
+from CF_IOmisc import *
 from CF_colourmap import *
 from CF_options import *
 from CF_area import *
+from CF_timeseries import *
